--- a/src/main/java/view/impl/JavaGachiMainScreenViewImpl.form
+++ b/src/main/java/view/impl/JavaGachiMainScreenViewImpl.form
@@ -123,7 +123,7 @@
           </grid>
         </children>
       </grid>
-      <grid id="21614" binding="buttonPanel" layout-manager="GridLayoutManager" row-count="1" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="21614" binding="buttonPanel" layout-manager="GridLayoutManager" row-count="1" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -141,7 +141,7 @@
           </component>
           <component id="d7910" class="javax.swing.JButton" binding="buttonThree">
             <constraints>
-              <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Exit"/>
@@ -177,6 +177,14 @@
             </constraints>
             <properties>
               <text value="Import"/>
+            </properties>
+          </component>
+          <component id="a1986" class="javax.swing.JButton" binding="webViewButton" default-binding="true">
+            <constraints>
+              <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Web View"/>
             </properties>
           </component>
         </children>
